# DNotepadX

./: .gitignore  Cargo.toml  LICENSE  README.md  setup.bat
src/: app.rs  file_operations.rs  main.rs  settings.rs  theme.rs
